# ERNIE-SDK

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  MANIFEST.in  Makefile  README.md  doc-requirements.txt  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
erniebot/: .flake8  .gitignore  Makefile  README.md  __init__.py  __main__.py  api_types.py  auth.py  backends.py  cli.py  client.py  config.py  dev-requirements.txt  errors.py  http_client.py  intro.py  mkdocs.yml  pyproject.toml  requirements.txt  response.py  setup.cfg  setup.py  types.py  version.py
erniebot-agent/: .flake8  .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_concurrent.py
erniebot-agent/applications/: README.md  gradio_demo.py  question_bot.py
erniebot-agent/applications/eb-agent-qa-bot/: README.md  init_vector_db.py  question_bot.py
erniebot-agent/applications/eb-qa/: question_bot.py
erniebot-agent/applications/erniebot_researcher/: EditorActorAgent.py  README.md  RankingAgent.py  ResearchAgent.py  ResearchTeam.py  ReviserActorAgent.py  UserProxyAgent.py  editor_actor_agent.py  fact_check_agent.py  group_agent.py  polish_agent.py  ranking_agent.py  render_agent.py  requirements.txt  research_agent.py  research_team.py  reviser_actor_agent.py  sample_group_agent.py  sample_report_example.py  ui.py  user_proxy_agent.py
erniebot-agent/applications/rpg_game/: README.md  chat_story_tool.py  img_gen_tool.py  rpg_game_agent.py  rpg_game_function.py
erniebot-agent/applications/search_agent/: retrieval.py  search_agent.py  utils.py
erniebot-agent/benchmark/: __init__.py  build_agent.py  build_tasks.py  run_benchmark.py  schema.py  utils.py
erniebot-agent/benchmark/data/: instruction_following_input_data.jsonl  transfer_data.py
erniebot-agent/cookbook/: FunctionAgent.ipynb  chat_models.ipynb  construction_assistant.ipynb  function_agent.ipynb  how_to_use_langchain_extension.ipynb  langchain_function_agent_with_retrieval.ipynb  llama_index_function_agent_with_retrieval.ipynb  local_tool.ipynb  memory.ipynb  message.ipynb  remote_tool.ipynb  retrieval_agent.ipynb  road_sign.jpeg.1  tools_intro.ipynb
erniebot-agent/cookbook/remote-tool/: README.md  remote_tool.ipynb  requirements.txt  server.py
erniebot-agent/erniebot_agent/: __init__.py  message.py  messages.py  version.py
erniebot-agent/erniebot_agent/agents/: __init__.py  agentchat.py  assistant_agent.py  base.py  conversable_agent.py  functional_agent.py  functional_agent_with_retrieval.py  groupchat.py  logging_config.py  prompt_agent.py  schema.py  user_proxy_agent.py
erniebot-agent/erniebot_agent/chat_models/: __init__.py  base.py  erniebot.py
erniebot-agent/examples/: aurora_search_example.py  automatic_prompt_engineer.py  baizhong_search_example.py  construction_assistant.ipynb  faiss_util.py  functional_agent_with_retrieval_example.py  knowledge_tools_example.py  rpg_game_agent.py  text_summarization.py  utils.py
erniebot-agent/experimental/: EditorActorAgent.py  ResearchAgent.py  ReviserActorAgent.py  UserProxyAgent.py
erniebot-agent/scripts/: format_and_lint.py  type_check.py
erniebot-agent/tests/: requirements.txt
erniebot/backends/: __init__.py  aistudio.py  base.py  bce.py  custom.py
erniebot/docs/: README.md  authentication.md  configuration.md  installation.md  models.md
erniebot/examples/: README.md
erniebot/functions/: __init__.py
erniebot/resources/: __init__.py  chat_completion.py  chat_file.py  embedding.py  fine_tuning.py  image.py  resource.py
erniebot/src/erniebot/: auth.py  (+10 more)
erniebot/tests/: README.md  requirements.txt  test_chat_completion.py  test_chat_completion_aio.py  test_chat_completion_mt.py  test_fine_tuning.py  test_function_calling.py  test_image.py
erniebot/tools/: base.py  schema.py
erniebot/utils/: __init__.py  bos_util.py  logging.py  misc.py  token_helper.py  url.py
(+552 files in other folders)
