# Here's a link about setup.cfg:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = erniebot_agent
version = attr: erniebot_agent.version.VERSION
description = Python library for the ERNIE Bot Agent
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Programming Language :: Python

[options]
package_dir = 
    =src
packages = find_namespace:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = src
include = 
    erniebot_agent
    erniebot_agent.*

[options.entry_points]
console_scripts = 
    erniebot_agent = erniebot_agent.__main__:console_entry

[options.extras_require]
gradio = 
    gradio >= 3.48
jinja2 = 
    jinja2
all = 
    erniebot_agent[gradio]
    erniebot_agent[jinja2]

[sdist]
dist_dir = output/dist

[bdist_wheel]
dist_dir = output/dist

[easy_install]
# Using baidu's official pip source
index_url = http://pip.baidu.com/root/baidu/+simple/
