# Here's a link about setup.cfg:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = erniebot
version = attr: erniebot.version.VERSION
description = Python library for the ERNIE Bot
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Programming Language :: Python

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = src
include = 
    erniebot
    erniebot.*

[options.entry_points]
console_scripts = 
    erniebot = erniebot.__main__:console_entry

[options.extras_require]
docs = file: docs-requirements.txt

[sdist]
dist_dir = output/dist

[bdist_wheel]
dist_dir = output/dist

[easy_install]
# Using baidu's official pip source
index_url = http://pip.baidu.com/root/baidu/+simple/
